--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     </ol>
 
     <h2>web이란 무엇인가?</h2>
-    <p>아해해해해해해햏ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ
-    ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㄴㄴㅇㄴㅇㄴㅇㄴㅇㄴㅇㄴ</p>
-    <p>이것으로 끝날건언ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>
+    <p>web이란 지금 연습하고있는것으로 스위스의 세른에서 만들어진것이다. 연습졸작인 관계로 설명이 짧다</p>
+    <p>그리고 3개의 연습페이지들이 더 있다.</p>
   </body>
 
 </html>
