--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h2>web이란 무엇인가?</h2>
     <p>web이란 지금 연습하고있는것으로 스위스의 세른에서 만들어진것이다. 연습졸작인 관계로 설명이 짧다</p>
     <p>그리고 3개의 연습페이지들이 더 있다.</p>
+    <p>#올리고 30분후 연습으로 이미지삽입등 이리저리 해봤던 페이지를 급하게 추가하였다. <a href = "joke.html>Here</a></p>
   </body>
 
 </html>
