--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1><a href="index.html" target="_blank" title="소개페이지">WEB</a></h1><br>
 
     <ol>
-      <li><a href="0.html" target="_blank" title="인벤소개">인벤</a></li>
-      <li><a href="1.html" target="_blank" title="유튜브소개">유튜브</a></li>
-      <li><a href="2.html" target="_blank" title="네이버소개">네이버</a></li>
+      <li><a href="0.html" title="인벤소개">인벤</a></li>
+      <li><a href="1.html" title="유튜브소개">유튜브</a></li>
+      <li><a href="2.html" title="네이버소개">네이버</a></li>
     </ol>
 
     <h2>web이란 무엇인가?</h2>
