--- a/2.html
+++ b/2.html
@@ -9,7 +9,7 @@
 
 
   <body>
-    <h1><a href="index.html" target="_blank" title="소개페이지">WEB</a></h1><br>
+    <h1><a href="index.html" title="소개페이지">WEB</a></h1><br>
 
     <ol>
       <li><a href="0.html" title="인벤소개">인벤</a></li>
